mgmt/in-prod-siem-v2/helm/loki-base/kustomize/tenants/qa-test/collectors/syslog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-syslog
  namespace: tenant-qa-test
  annotations:
    tenant: qa-test
    collector: syslog
    type: http
spec:
  selector:
    app: http-syslog
  ports:
  - port: 8080
    targetPort: 8080
