mgmt/in-prod-siem-v2/helm/loki-base/kustomize/tenants/qa-test/collectors/syslog/httproute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-syslog
  namespace: tenant-qa-test
  annotations:
    tenant: qa-test
    collector: syslog
    type: http
    env: in-prod-siem-v2
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
    nginx.org/rewrites: "serviceName=http-syslog rewrite=/loki/api/v1/raw"
    nginx.org/auth-type: "basic"
    nginx.org/auth-secret: "htpasswd"
    nginx.org/client-max-body-size: "50m"
spec:
  rules:
    - host: in.siem.v2.accuknox.com
      http:
        paths:
          - path: /in-prod-siem-v2/qa-test/c7e5b99450534ac4bde94afe08686ed61963fda0b4df7aa64623f651/syslog/push
            pathType: Prefix
            backend:
              service:
                name: http-syslog
                port:
                  number: 8080
